changelog

-- next

++ Make it easier to upgrade by decoupling data dir from ".".

+ Amend changelog for 0.8.0 in include omitted elements:
	Syntax highlighting for code blocks.
	Something resembling an actual manual.

-- 0.8.0

+++ Add Honk Filtering and Censorship System (HFCS).

+++ Editing honks (Update activity).

++ Subscribe to hashtags.

++ Search. I hate it already.

++ Hashtags that work?

++ Dynamic refresh and page switching without reloads.

++ Reply control. Ack replies to show them on the site.

+ Allow PDF attachments. For serious business only.

+ "untag me" button to mute part of a thread.

+ Inline images in posts. Send and receive.

+ Somewhat functional admin console (TTY).

+ More JS free fallbacks for some basic functions.

+ Add chpass command.

+ Improved honker management.

+ Better markdown output.

+ Times for events.

+ Split media database into separate blob.db.

+ Location checkin. Welcome to the... danger zone!

+ Quick mention @alias.

+ Image descriptions.

+ Unbonking.

+ More robust retries for fetching objects.

+ Don't decode excessively large images and run out of memory.

+ Syntax highlighting for code blocks.

+ Something resembling an actual manual.

- Sometimes the cached state of the @me feed becomes unsynced.
	Acked status may display incorrectly.

-- 0.7.7

+ Add another retry to workaround pixelfed's general unreliability.

+ Attached images are not lost when previewing.

- Remove sensitivity to spicy peppers.

+ Keep reply to setting during preview.

+ Increase max thread retrieval depth to 10.

-- 0.7.6

+ Fix a bug where upgrades would not complete in one step.

-- 0.7.5

+ Fix a bug (introdcued 0.7.4) preventing new user creation from working.

+ Semi flexible URL patterns to allow transition from other software.

+ Improved ActivityPub parsing conformance for better compat with others.

+ Add server name to user agent.

+ What may be considered UI improvements.

-- 0.7.4

+ Ever more bug fixes.
