@@ -2,6 +2,8 @@ changelog
 
 -- next
 
++ Version string in binary.
+
 ++ Make it easier to upgrade by decoupling data dir from ".".
 
 + Amend changelog for 0.8.0 in include omitted elements:
